# pico_timer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  copy.sh
docs/: index.md  timesync.md
include/: app.hh  config.hh  context.hh  input.hh  temp_dht.hh
include/comm/: server.hh
include/hw/: display.hh  rtc.hh  temp_dht.hh
src/: app.cc  app.cpp  context.cpp  display.cpp  hello_world.cpp  input.cpp  main.cc  main.cpp  scan_i2c.cpp  temp_dht.cpp
src/comm/: server.cc
src/hw/: display.cpp  rtc.cc  temp_dht.cc  temp_dht.cpp
timesync-sv/: Cargo.toml  README.md
timesync-sv/src/: coms.rs  main.rs  messages.rs  proto.rs  ui.rs  worker.rs
